# Geometry-Based-Data-Selection-ML-project-

./: README.md  pyproject.toml
artifacts/splits/: mnist_split_seed42.json
artifacts_cifar10_remove_easy/plots/: conclusions.json  conclusions.txt
artifacts_cifar10_remove_easy/summary/: curve_metrics.csv  curve_metrics.json
artifacts_cifar10_remove_hard/plots/: conclusions.json
artifacts_cifar10_remove_hard/splits/: cifar10_split_seed42.json
artifacts_cifar10_remove_hard/summary/: curve_metrics.csv  curve_metrics.json
artifacts_mnist_remove_hard/plots/: conclusions.txt
artifacts_mnist_remove_hard/summary/: curve_metrics.json
artifacts_tiny_shakespeare_full_remove_easy/summary/: curve_metrics.json
artifacts_tiny_shakespeare_full_remove_hard/plots/: conclusions.json
artifacts_tiny_shakespeare_remove_easy/plots/: conclusions.json  conclusions.txt  scaling_law_fits.json
artifacts_tiny_shakespeare_remove_easy/summary/: curve_metrics.csv  curve_metrics.json
scripts/: 01_rank_samples.py  02_build_subsets.py  03_train_resnet18_grid.py  04_aggregate_and_plot.py  05_plot_cropped.py  run_full_mnist_pipeline.py
tests/: test_effective_rank_from_article.py  test_effective_rank_score.py  test_error_rate_score.py  test_forgetting_score.py  test_integration_aggregation.py  test_integration_pipeline_smoke.py  test_integration_plot_generation.py  test_integration_train_smoke.py  test_intrinsic_dimensionality_scorer.py  test_random_determinism.py  test_ranking_stability.py  test_semantic_dedup.py  test_split_deterministic.py  test_subset_sizes.py
(+2868 files in other folders)
